fix floating cover on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -184,6 +184,9 @@ figure.cover {
             border: 0px;
         }
     }
+    @media (max-width: 600px) {
+        float: none;
+    }
 }
 
 figcaption {
